[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ulid-flake"
version = "0.1.1"
description = "Ulid-Flake, A 64-bit ULID variant featuring Snowflake."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "abailinrun", email = "abailinrun@gmail.com"}
]
maintainers = [
  {name = "abailinrun", email = "abailinrun@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]
bugs = "https://github.com/ulid-flake/python/issues"
changelog = "https://github.com/ulid-flake/python/blob/master/changelog.md"
homepage = "https://github.com/ulid-flake/python"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

